--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,19 +8,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:paddingTop="20dp">
 
 
 
         <TextView
             android:id="@+id/fragment_search_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/fragment_search_name"
-            android:textSize="20sp"
-
-            >
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/fragment_search_content"
+            android:textSize="20sp">
         </TextView>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </EditText>
 
     </LinearLayout>
 </LinearLayout>
