--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item
         android:id="@+id/action_search"
-        android:icon="@drawable/ic_search_white_24dp"
+        android:icon="@drawable/ic_search_black_24dp"
         android:title="@string/action_search"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_new"
-        android:icon="@drawable/ic_add_white_24dp"
+        android:id="@+id/action_add"
+        android:icon="@drawable/ic_add_black_24dp"
         android:title="@string/action_new"
         app:showAsAction="ifRoom" />
     <item
