--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -2,27 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:paddingTop="20dp">
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp" >
 
 
     <EditText
-        android:id="@+id/fragment_add_editText_name"
+        android:id="@+id/fragment_add_EditText_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="5dp"
         android:hint="@string/fragment_add_name" />
 
     <EditText
-        android:id="@+id/fragment_add_editText_phone_number_1"
+        android:id="@+id/fragment_add_EditText_phone_number_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="5dp"
         android:hint="@string/fragment_add_phone_number" />
 
     <EditText
-        android:id="@+id/fragment_add_editText_tag"
+        android:id="@+id/fragment_add_EditText_tag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="5dp"
