--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kennytesting.contactstest.ContactsFragment"
-    android:paddingTop="10dp" >
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 
     <!-- TODO: Update blank fragment layout -->
 
