--- a/app/src/main/res/layout/drawer_list_navigation_item.xml
+++ b/app/src/main/res/layout/drawer_list_navigation_item.xml
@@ -1,23 +1,4 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="start|top">
-
-    <ListView
-        android:id="@+id/drawer_ListView_fragment_transition"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/drawer_TextView_fragment_titles"
-            android:layout_width="match_parent"
-            android:layout_height="48dp">
-        </TextView>
-
-    </ListView>
-
-</ListView>
+    android:layout_height="48dp">
+</TextView>
