--- a/app/src/main/res/layout/drawer_list_navigation_item.xml
+++ b/app/src/main/res/layout/drawer_list_navigation_item.xml
@@ -1,4 +1,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp">
+    android:layout_height="48dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    android:layout_gravity="center_vertical">
 </TextView>
