--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,29 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:padding="16dp">
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/fragment_search_TextInputLayout_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/fragment_search_textView_content"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/fragment_search_content"
-            android:textSize="20sp">
-        </TextView>
+        android:layout_height="72dp"
+        android:layout_gravity="bottom"
+        android:theme="@style/MyTextInputLayoutTheme">
 
         <EditText
-            android:id="@+id/fragment_search_editText_content"
+            android:id="@+id/fragment_search_EditText_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/fragment_search_hint">
 
         </EditText>
 
-    </LinearLayout>
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
